test/statements/opEquals/promoteLogicalOrEquals.good
promoteLogicalOrEquals.chpl:2: error: cannot promote short-circuiting || operator
