test/statements/opEquals/promoteLogicalOrEquals.chpl
var A: [1..3, 1..3] bool = false;
A ||= true;
writeln(A);
